syntax = "proto3";

option csharp_namespace = "UniversitySample.Courses.Domain.GrpcApi";

service GrpcCourses {
	rpc Get(GetCoursesRequest) returns (GetCoursesResponse);
    rpc GetById(GetCourseByIdRequest) returns (GetCourseByIdResponse);
    rpc Add(Course) returns (Response);
    rpc Update(UpdateCourseRequest) returns (Response);
    rpc Delete(DeleteCourseRequest) returns (Response);
}

message GetCoursesRequest {
	optional string name = 1;
}

message GetCoursesResponse {
    string errorMessage = 1;
    repeated Course courses = 2;
}

message GetCourseByIdRequest {
	string id = 1;
}

message GetCourseByIdResponse {
	string errorMessage = 1;
    Course course = 2;
}

message UpdateCourseRequest {
    string errorMessage = 1;
    Course course = 2;
}

message DeleteCourseRequest {
    string id = 1;
}

message Response {
    string errorMessage = 1;
}

message Course {
	string id = 1;
	optional string name = 2;
    optional string description = 3;
    string startDate = 4;
    string endDate = 5;
    optional string professor = 6;
    string createdDate = 7;
}
